src/test/test-models/good/services/test_fail.stan
parameters {
  array[2] real<lower=-10, upper=10> y;
}
model {
  reject("");
}
