src/test/test-models/bad/data_index/non_data_index8.stan
parameters {
  real y[3];

}
transformed parameters {
  positive_ordered[size(y)] z;
}
